[gd_scene load_steps=16 format=3 uid="uid://4kngfu2ffdll"]

[ext_resource type="Texture2D" uid="uid://32duh0vpg7rs" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin (16 x 16).png" id="1_8bk7x"]
[ext_resource type="Script" uid="uid://cac5mya2ncf4e" path="res://scripts/coin.gd" id="1_ab8qe"]
[ext_resource type="Texture2D" uid="uid://cp3k6fkntnu6s" path="res://assets/Mini FX, Items & UI/Effects/Yellow_Sparkle (16 x 16).png" id="1_h1t07"]
[ext_resource type="AudioStream" uid="uid://7sktgcsqpvt4" path="res://sounds/collect_coin.wav" id="4_1we67"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l7xbt"]
atlas = ExtResource("1_h1t07")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw04l"]
atlas = ExtResource("1_h1t07")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_53380"]
atlas = ExtResource("1_h1t07")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxcpu"]
atlas = ExtResource("1_h1t07")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ckuh"]
atlas = ExtResource("1_h1t07")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bk7x"]
atlas = ExtResource("1_8bk7x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1t07"]
atlas = ExtResource("1_8bk7x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab8qe"]
atlas = ExtResource("1_8bk7x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1we67"]
atlas = ExtResource("1_8bk7x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l7xbt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7xbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw04l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53380")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxcpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ckuh")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bk7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1t07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab8qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1we67")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8bk7x"]
radius = 8.0

[node name="coin" type="Area2D"]
collision_layer = 8
script = ExtResource("1_ab8qe")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l7xbt")
animation = &"idle"
autoplay = "idle"

[node name="colision" type="CollisionShape2D" parent="."]
scale = Vector2(1.1, 1.3)
shape = SubResource("CircleShape2D_8bk7x")

[node name="coin_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1we67")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
